0.6.0
- added log_level and log_output to config.lua (in game command overrides for current session)
- replaced misleading < and > in  and maximum train length icons with ≤ and ≥
- changed train composition signal names

0.5.6
- added rudimentary sanity checks for different forces: Requester, Provider and delivering Train have to be in the same force
- can not fix: Trains of different forces will still try going to stops with the same name in other forces, including depots

0.5.5
- fix rail tanker displaying incorrect cargo-wagon icon

0.5.4
- changed Depot detection from name "Depot" to virtual signal "Stop is Depot"
- made input and output blueprintable again / circuit connections are maintained by blueprints
- removed circuit wait condition from depots in schedule / remove need to connect output with train stop
- fixed bugs in entity and item prototypes
- fixed 0.5.3 Error: __LogisticTrainNetwork__/control.lua:493: attempt to index field 'station' (a nil value)

0.5.3
- added stop_timeout to config parameters

0.5.2
- fixed adding/removing carriages of parked trains does not update composition signals

0.5.1
- train composition output is now binary encoded

0.5.0
- provided items are split evenly among requesters with Best Effort enabled
- added round robin handling, sending a train moves the request to the bottom of order list

0.4.6
- fixed Error when adding LTN to existing game (on_init: __LogisticTrainNetwork__/control.lua:32: attempt to concatenate field '?' (a nil value)")
- fixed order cleanup removed valid order data
- added inactivity timeout to schedule (patch for misbehaving Yuoki Tender Locomotives)

0.4.5
- tweaks to order cleanup
- changed log_output to accept 'console', 'log', 'both'(new default) as parameters

0.4.4
- fixed: circuit/signal error detection sometimes failed
- fixed: changing station name between order creation and schedule generation can produce invalid stations in schedule